# box-ptr

./: CMakeLists.txt  README.md  main.cpp
include/Box_Ptr/: boxPtr.hpp
include/box-ptr/: BoxPtr.hpp
tests/: casts.cpp  constructors-test.cpp  constructorsTest.cpp  hash.cpp  member-functions.cpp  memberFunctions.cpp
tests/test-classes/: test-classes.cpp  test-classes.hpp
tests/testClasses/: testClasses.cpp  testClasses.hpp
